# Siraal

./: .gitignore  BEST MODEL EVER.dwl  BEST MODEL EVER.dwl2  README.md  TEMPLATE_DESCRIPTIONS.md  ai_agent.py  ai_bom_copilot.py  audit_logger.py  autocad_engine.py  autocad_engine_3d.py  cost_engine.py  custom_rules.json  genai_creator.py  gui_launcher.py  gui_launcher_3d.py  gui_launcher_val.py  main.py  pyproject.toml  requirements.txt  validator.py  validator_3d.py
excels/: BOM_FILE_2D.xlsx  BOM_FILE_3D.xlsx  csv_mech.csv  demo - BIG.xlsx  demo.xlsx  demo_gears_3d (3) - BIG.xlsx  demo_gears_3d (3).xlsx  mechanical_batch.xlsx  validation_report.txt  ~$demo.xlsx
output_ai/: ai_preview_bom.xlsx
output_manual/: manual_bom.xlsx
templates/: Custom_Aero_Hub_Plate.json  Custom_Aerospace_Gear_Blank.json  Custom_Centrifugal_Pump_Assembly.json  Custom_Radial_Cooling_Hub.json  Custom_Radial_engnie.json  Custom_Turbine_Disc_LT.json  Custom_Vane.json  Custom_pump.json  Custom_v8_engine.json
